InnovatricsPresenceCheckProviderTest